# backupdirs3

./: .env  .gitignore  README.md  build.sh  configmon.yaml  configmon2.yaml  main.spec  publish.sh  pyproject.toml
.github/workflows/: release.yaml
backupdir/: main.py
backupdirs3/: main.py
python_configmon/: main.py
python_inotify/: main.py
